--- a/package.json
+++ b/package.json
@@ -9,14 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.2.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
+    "@mantine/carousel": "^6.0.7",
+    "@mantine/core": "^6.0.0",
+    "@mantine/dates": "^6.0.0",
+    "@mantine/dropzone": "^6.0.0",
+    "@mantine/ds": "6.0.0",
+    "@mantine/form": "^6.0.0",
+    "@mantine/hooks": "^6.0.0",
+    "@mantine/modals": "^6.0.0",
+    "@mantine/next": "^6.0.0",
+    "@mantine/notifications": "^6.0.0",
+    "@mantine/nprogress": "^6.0.0",
+    "@mantine/prism": "^6.0.0",
+    "@mantine/spotlight": "^6.0.0",
+    "@mantine/tiptap": "^6.0.0",
+    "@tabler/icons": "1.119.0",
+    "@tabler/icons-react": "^2.1.2",
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "embla-carousel-react": "^7.1.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.10.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.6",
+    "tabler-icons-react": "^1.56.0",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
